変数表示をできるように　必要なライブラリも追加